Fix Bug 317198 - background-color for message window for HTML Message need to be adjustable

FIXED-IN: 4.11
BUG: 317198